# sLM_universe_learning

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-01-smolsearch.yml  deploy-02-ragify.yml  deploy-03-agentflow.yml  deploy-04-llmops-baseline.yml
configs/: backbones.yaml  defaults.yaml  hardware.yaml
courses/_template/: README.md
courses/_template/class00_template/: NOTES.md  README.md  eval.py  exercises.md  run.sh  train.py
courses/course0_bridge/: README.md
courses/course1_finetuning/: README.md
courses/course1_finetuning/grids/: lora_rank_sweep.yaml
courses/course2_continual/: README.md
courses/course2_continual/grids/: baseline_cross_backbone.yaml  ewc_cross_backbone.yaml  isolation_cross_backbone.yaml  replay_cross_backbone.yaml  (+1 more)
courses/course3_pipeline/: README.md
courses/course4_langchain_ecosystem/: MASTERY_GUIDE.md  README.md
env/: README.md  slm-cpu.yml  slm-gpu.yml
exams/: EXAM_PLAN.md  exam_01_sLM_mastery.ipynb  exam_02_finetuning_deep_dive.ipynb  exam_03_continual_learning.ipynb  exam_04_pipelines_production.ipynb  exam_05_langchain_agents.ipynb  exam_06_interview_simulation.ipynb  exam_07_company_spotlight.ipynb
shared/: __init__.py  backbones.py  config.py  continual.py  datasets.py  drift.py  eval_harness.py  launcher.py  llm_client.py  logging_utils.py  paths.py  registry.py  repro.py  sharded_run.sh  training.py  vector_store.py
tests/: test_course2_continual.py  test_course3_pipeline.py  test_course4_langchain.py  test_shared_smoke.py
(+239 files in other folders)
