[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-universe-learning"
version = "0.0.1"
description = "Self-taught course on small language models"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
